// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp render 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="cardColumn"
    >
      <div
        class="card"
      >
        <div
          class="signup"
        >
          <div
            class="header"
          >
            <img
              class="logo"
              src="test-file-stub"
              width="120"
            />
          </div>
          <div
            class="title"
          >
            Sign up
          </div>
          <div
            class="subtitle"
          >
            and get ship done.
          </div>
          <form
            class="layout-vertical spacing-medium"
          >
            <div
              class="layout-vertical spacing-small field"
            >
              <label>
                Email
              </label>
              <input
                class=""
                id="email"
                name="email"
                placeholder="email@work.com"
                value=""
              />
            </div>
            <div
              class="layout-vertical spacing-small field"
            >
              <label>
                Password
              </label>
              <input
                class=""
                id="password"
                name="password"
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <div />
            <input
              class="button primary"
              type="submit"
              value="Sign up"
            />
          </form>
          <h2
            class="lineMessage"
          >
            <span
              class="message"
            >
              or sign up with
            </span>
          </h2>
          <div
            class="layout-horizontal spacing-auto oAuthIcons"
          >
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=github&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=bitbucket&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=gitlab&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=linkedin&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=google&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=azure&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
          </div>
          <div
            class="disclaimer"
          >
            By signing up, you agree to our 
            <a
              class="externalLink"
              href="https://harness.io/privacy/"
              rel="noreferrer"
              target="_blank"
            >
              Privacy Policy 
            </a>
            and our 
            <a
              class="externalLink"
              href="https://harness.io/subscriptionterms/"
              rel="noreferrer"
              target="_blank"
            >
              Terms of Use
            </a>
          </div>
          <div
            class="footer"
          >
            Already have an account?
             
            <a
              href="/signin"
            >
              Sign in
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="imageColumn"
    >
      <img
        alt=""
        aria-hidden="true"
        class="image"
        src="test-file-stub"
      />
    </div>
  </div>
</div>
`;

exports[`SignUp telemetry 1`] = `
<div>
  <div
    class="layout"
  >
    <div
      class="cardColumn"
    >
      <div
        class="card"
      >
        <div
          class="signup"
        >
          <div
            class="header"
          >
            <img
              class="logo"
              src="test-file-stub"
              width="120"
            />
          </div>
          <div
            class="title"
          >
            Sign up
          </div>
          <div
            class="subtitle"
          >
            and get ship done.
          </div>
          <form
            class="layout-vertical spacing-medium"
          >
            <div
              class="layout-vertical spacing-small field"
            >
              <label>
                Email
              </label>
              <input
                class=""
                disabled=""
                id="email"
                name="email"
                placeholder="email@work.com"
                value="random@hotmail.com"
              />
            </div>
            <div
              class="layout-vertical spacing-small field"
            >
              <label>
                Password
              </label>
              <input
                class=""
                disabled=""
                id="password"
                name="password"
                placeholder="Password"
                type="password"
                value="12345678"
              />
            </div>
            <div />
            <input
              class="button primary"
              disabled=""
              type="submit"
              value="Sign up"
            />
          </form>
          <h2
            class="lineMessage"
          >
            <span
              class="message"
            >
              or sign up with
            </span>
          </h2>
          <div
            class="layout-horizontal spacing-auto oAuthIcons"
          >
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=github&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=bitbucket&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=gitlab&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=linkedin&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=google&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
            <a
              class="iconContainer"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=azure&action=signup&isNG=true"
            >
              <img
                height="24"
                src="test-file-stub"
                width="24"
              />
            </a>
          </div>
          <div
            class="disclaimer"
          >
            By signing up, you agree to our 
            <a
              class="externalLink"
              href="https://harness.io/privacy/"
              rel="noreferrer"
              target="_blank"
            >
              Privacy Policy 
            </a>
            and our 
            <a
              class="externalLink"
              href="https://harness.io/subscriptionterms/"
              rel="noreferrer"
              target="_blank"
            >
              Terms of Use
            </a>
          </div>
          <div
            class="footer"
          >
            Already have an account?
             
            <a
              href="/signin"
            >
              Sign in
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="imageColumn"
    >
      <img
        alt=""
        aria-hidden="true"
        class="image"
        src="test-file-stub"
      />
    </div>
  </div>
</div>
`;
